--- a/tech_solutions_webpage.html
+++ b/tech_solutions_webpage.html
@@ -174,6 +174,7 @@ Task 3: Incorporate Bootstrap Buttons with interactive hover effects
                         
                         <textarea class="form-control" name="comments" id="commments" style="height: 100px" placeholder="Share any additional comments or questions here."></textarea>
                     </div>
+                    <!--Task 3-->
                     <div class="btn-group" role="group" aria-label="submit and reset buttons">
                         <button type="reset" class="btn btn-outline-secondary">Reset</button>
                         <button type="submit" class="btn btn-outline-primary">Submit</button> 
@@ -202,6 +203,7 @@ Task 3: Incorporate Bootstrap Buttons with interactive hover effects
                     <form>
                         <label for="email" class="form-label">Email:</label>
                         <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email here">
+                        <!--Task 3-->
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
